--- a/Solution/index.html
+++ b/Solution/index.html
@@ -14,7 +14,6 @@
     <h1 class="logo">Brickwork</h1>
      
     <div class="input_N_M">
-        <h2>Step 1</h2>
     <input  type="number" id="N"  placeholder="N" required/>
     <input  type="number" id="M"  placeholder="M" required/>
     <button type="button"  class="mainBtn">Enter</button>
@@ -24,7 +23,7 @@
 
     <form id="table" class="needs-validation"  required></form>
     <button type="button"  class="manualBtn">Submit</button>
-    <canvas class="canvas" id="myCanvas" width="10000" height="500"></canvas>
+    <canvas style="border: 1px solid white;" class="canvas" id="myCanvas" width="10000" height="160"></canvas>
 </body>
 <script type="module" src="app.js" ></script>
 </html>
