--- a/Solution/index.html
+++ b/Solution/index.html
@@ -23,7 +23,7 @@
 
     <form id="table" class="needs-validation"  required></form>
     <button type="button"  class="manualBtn">Submit</button>
-    <canvas style="border: 1px solid white;" class="canvas" id="myCanvas" width="10000" height="160"></canvas>
+    <canvas  class="canvas" id="myCanvas" width="10000" height="160"></canvas>
 </body>
 <script type="module" src="app.js" ></script>
 </html>
